# jira-tools

./: .env.example  .gitignore  README.md  TODO.md  campos.json  config.py  jira_history.duckdb  main.py  pyproject.toml
.github/: copilot-instructions.md
src/core/: __init__.py
src/core/jira/: jira_integration.py
src/core/storage/: db_manager.py
src/mcp/: __init__.py  server.py
src/tools/langchain/: jira_tools.py
